Adding new text

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     <h4>My favorite color is white.</h4>
                     <h4>My favorite food is any Vietnamese noodle soup.</h4>
                     <h4>If I could be any animal, I would be a bird.</h4>
+                    <p> Bird can travel anywhere! Chirp~ chirp!</p>
             </div>
           </body>
         </html>
